app/assets/stylesheets/pages/_index.css.sass
.global-index-main-wrapper
  margin-top: 30px
  padding: 0 10px

.global-index-main-col
  @extend %col-8
  .bx-wrapper
    @extend %user-sidebar-block-shadow
    margin: 0
  .global-index-slider
    padding: 0
    .slider-content-wrapper
      position: relative
      width: 100%
      height: 420px
      +background-size(cover)
    .slider-caption
      position: absolute
      bottom: 0
      width: 100%
      height: 70px
      background-color: $c-global-index-slider-caption-bg
      color: $c-white
      font-size: $fz-l
      padding: 1em
  .bx-wrapper .bx-pager
    width: auto
    right: 15px
    bottom: 20px
  .bx-wrapper .bx-pager.bx-default-pager a
    width: 12px
    height: 12px
    +border-radius(50%)
    background-color: $c-global-index-slider-pager
  .bx-wrapper .bx-pager.bx-default-pager a.active
    background-color: $c-global-index-slider-pager-active

  .global-index-albums-wrapper
    @extend %user-sidebar-block-shadow
    margin-top: 25px
    .nav-tabs
      background-color: $c-white
      border: none
    li
      +span(6)
      text-align: center
      margin: 0
      &.active a
        background-color: $c-main-orange
        color: $c-white
      &.active a:before
        background-image: asset-url('assets/site-navi-icon-album.png')
      a
        background: none
        border-radius: 00
        color: $c-dark-grey
      a, a:focus, a:hover
        margin: 0
        border: none
      a:before
        content: ""
        display: inline-block
        margin-bottom: -4px
        width: 20px
        height: 20px
        background-image: asset-url('assets/index-album-icon.png')
        +background-size(cover)
    .tab-content
      +pie-clearfix
      padding: 5px 0
      padding-left: 5px
      border: 5px solid $c-main-orange
      background-color: $c-white
    .album-unit
      display: block
      color: $c-dark-grey
      +span(4)
      padding-right: 5px
      &:hover, &:focus
        text-decoration: none
        .album-info
          border: 1px solid lighten($c-main-orange, 20)
          border-top: none
      .album-cover
        @extend %background-cover
        width: 100%
        height: 150px
        background-color: #555
      .album-info
        padding: 10px 0
        text-align: center
        border: 1px solid lighten($c-dark-grey, 60)
        border-top: none
      h4
        font-size: $fz-m
        margin: 0
        margin-bottom: 5px
      span
        color: darken($c-main-orange, 10)


.global-index-side-col
  @extend %col-4

.global-index-friend-status-wrapper
  @extend %user-sidebar-block-shadow
  .friend-status-title
    font-size: $fz-m
    text-align: center
    color: $c-white
    background-color: $c-main-orange
    margin: 0
    padding: .5em
  .status-unit
    +pie-clearfix
    width: 100%
    padding: .2em .5em
    border-bottom: 3px solid $c-global-index-friend-status-border
    background-color: $c-user-sidebar-bg
    +transition(all .3s)
    &:hover
      margin-left: -8px
    .avatar
      +span(2)
      img
        border: 5px solid $c-white
    .content
      +span(10)
      padding-left: .5em
    .name
      display: block
      margin-top: .2em
      color: darken($c-main-orange, 10)
      font-size: $fz-m
    .status
      margin-top: .2em
      font-size: $fz-s
      color: $c-dark-grey
      line-height: 1.3



.global-index-diaries-wrapper
  +pie-clearfix
  margin-top: 25px
  padding-left: 25px
  padding-right: 20px
  .global-index-dairies-title
    padding: 0 10px
  h3
    margin: 0
    padding: .5em 2em
    background-color: $c-white
    font-size: $fz-l
    font-weight: bolder
    border: 1px solid lighten($c-dark-grey, 60)
  .diaries-wrapper
    padding-left: 10px
  .diary-unit
    display: block
    margin-top: 10px
    +span(6)
    padding-right: 10px
    color: $c-dark-grey
    &:focus, &:hover
      text-decoration: none
  .diary-inner-wrapper
    +transition(all .3s)
    @extend %block-hover-effect
    padding: 30px
    border: 1px solid lighten($c-dark-grey, 60)
    background-color: $c-white
    .diary-cover
      @extend %background-cover
      width: 100%
      height: 300px
  .diary-info-wrapper
    +pie-clearfix
    position: relative
    margin-top: 20px
    .diary-baku
      @extend %baku
      left: 0
      top: 0
    .diary-title
      padding-left: 65px
      padding-top: 10px
      margin: 0
      margin-bottom: 5px
      font-size: $fz-xl
      font-weight: bolder
    .diary-subinfo
      padding-left: 65px
      color: $c-user-status-message-subinfo
      font-size: $fz-m
    .diary-content
      margin-top: 20px
      height: 120px


.global-index-business-wrapper
  margin-top: 30px
  padding-top: 8px
  padding-left: 25px
  padding-right: 30px
  border-top: 1px solid $c-black
  .business-actions-wrapper
    +span(4)
    padding-left: 10px
  .business-action-title
    margin: 0
    font-size: $fz-l
    font-weight: bolder
  .business-action-feature-image
    @extend %background-cover
    width: 100%
    height: 150px
    margin-top: 10px
  .business-action-list
    background-color: $c-white
    padding: 20px 10px
    ol
      padding: 0
      padding-left: 30px
    li
      padding: 5px
      border-bottom: 1px solid lighten($c-dark-grey, 50)
      font-weight: bolder
      +transition(all .3s)
      &:hover
        background-color: #eee

    a
      display: block
      color: $c-dark-grey
      &:hover, &:focus
        text-decoration: none

